--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "build": "truffle build",
-    "test": "truffle test ./test/LPFarm.test.js",
+    "build-v5": "truffle build --config truffle-config-v5.js",
+    "test": "truffle test --compile-none ./test/LPFarm.test.js",
     "prettier": "pretty-quick --pattern \"**/*.*(js|jsx)\""
   },
   "repository": {
@@ -25,6 +26,7 @@
   "license": "GPL-3.0",
   "dependencies": {
     "bignumber.js": "^9.0.1",
+    "ethers": "*",
     "moment": "^2.29.1",
     "truffle-assertions": "^0.9.2",
     "truffle-hdwallet-provider": "^1.0.17"
