--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "bignumber.js": "^9.0.1",
     "ethers": "*",
+    "fs-extra": "^4.0.3",
     "moment": "^2.29.1",
     "truffle-assertions": "^0.9.2",
     "truffle-hdwallet-provider": "^1.0.17"
